tests/checker/bad/TestLibNS1.scillib
(* importing the a (non-empty) library into same namespace is a name conflict *)
import TestLibNS1 as Foo
       TestLibNS1 as Foo

library TestLibNS1

let foo = Foo.foo

